--- a/.gitignore
+++ b/.gitignore
@@ -110,8 +110,8 @@ temp/
 # End of https://www.gitignore.io/api/node
 
 # Quirk ignore
-node_modules/*
-out/*
+node_modules
+out
 .eslintrc
 *.git_ignore.js
 
