--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-  "name": "quirk-quantum-circuit-simulator",
-  "title": "Quirk",
-  "description": "A drag-and-drop toy for exploring and understanding small quantum circuits.",
-  "license": "Apache-2.0",
-  "version": "2.3.0",
-  "homepage": "https://github.com/Strilanc/Quirk",
-  "bugs": {
-    "url": "https://github.com/Strilanc/Quirk/issues"
-  },
-  "devDependencies": {
-    "grunt": "~1.0.1",
-    "grunt-cli": "~1.2.0",
-    "grunt-contrib-clean": "~1.0.0",
-    "grunt-contrib-concat": "~1.0.1",
-    "grunt-contrib-copy": "~1.0.0",
-    "grunt-contrib-uglify": "~3.1.0",
-    "grunt-karma": "~2.0.0",
-    "grunt-traceur": "~0.5.5",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-firefox-launcher": "~1.0.1",
-    "nodemon": "^2.0.2",
-    "traceur": "0.0.111"
-  },
-  "scripts": {
-    "build": "grunt build-src",
-    "test": "grunt test",
-    "start": "http-server ./out",
-    "test-chrome": "grunt test-chrome",
-    "test-firefox": "grunt test-firefox",
-    "test-travis": "grunt test-travis",
-    "watch": "nodemon --watch src --exec \"npm run build\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Strilanc/Quirk.git"
-  },
-  "dependencies": {
-    "http-server": "^0.12.1"
-  }
+	"name": "quirk-quantum-circuit-simulator",
+	"title": "Quirk",
+	"description": "A drag-and-drop toy for exploring and understanding small quantum circuits.",
+	"license": "Apache-2.0",
+	"version": "2.3.0",
+	"homepage": "https://github.com/Strilanc/Quirk",
+	"bugs": {
+		"url": "https://github.com/Strilanc/Quirk/issues"
+	},
+	"devDependencies": {
+		"grunt": "~1.0.1",
+		"grunt-cli": "~1.2.0",
+		"grunt-contrib-clean": "~1.0.0",
+		"grunt-contrib-concat": "~1.0.1",
+		"grunt-contrib-copy": "~1.0.0",
+		"grunt-contrib-uglify": "~3.1.0",
+		"grunt-karma": "~2.0.0",
+		"grunt-traceur": "~0.5.5",
+		"karma": "~1.7.0",
+		"karma-chrome-launcher": "~2.2.0",
+		"karma-firefox-launcher": "~1.0.1",
+		"nodemon": "^2.0.2",
+		"traceur": "0.0.111",
+		"http-server": "^0.12.1"
+	},
+	"scripts": {
+		"build": "grunt build-src",
+		"test": "grunt test",
+		"start": "http-server ./out",
+		"test-chrome": "grunt test-chrome",
+		"test-firefox": "grunt test-firefox",
+		"test-travis": "grunt test-travis",
+		"watch": "nodemon --watch src --watch html -e js,html --exec \"npm run build\""
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Strilanc/Quirk.git"
+	},
+	"nodemonConfig": {
+		"delay": "2500"
+	}
 }
