--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
 		"express": "^4.17.1"
 	},
 	"scripts": {
-		"start": "node -r dotenv/config src/index.js"
+		"start": "node -r dotenv/config src/index.js",
+		"dev": "echo \"Not implemented yet!\""
 	}
 }
