--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,12 @@
 		"nodemon": "^2.0.2"
 	},
 	"scripts": {
-		"start": "node -r dotenv/config src/index.js",
-		"dev": "nodemon --exec \"npm run start\""
+		"prod": "node -r dotenv/config src/index.js",
+		"dev": "nodemon --exec \"npm run prod\"",
+		"test": "echo \"Not implemented!\"",
+		"docker-build": "docker build -t ses-2a-backend .",
+		"docker-run-prod": "docker run -p 3000:3000 ses-2a-backend",
+		"docker-run-dev": "docker run -p 3000:3000 -v $(pwd):/app -e STAGE=\"dev\" ses-2a-backend"
 	},
 	"nodemonConfig": {
 		"delay": "1000",
