--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
 		"url": "git://github.com/AndrewDucDanhDo/Software-Engineering-Studio-2A"
 	},
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"dotenv": "^8.2.0",
 		"esm": "^3.2.25",
 		"express": "^4.17.1",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"numeric": "^1.2.6"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.2",
