--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,7 @@
 		"esm": "^3.2.25",
 		"express": "^4.17.1",
 		"morgan": "^1.10.0",
-		"numeric": "^1.2.6",
-		"swagger-jsdoc": "^4.0.0",
-		"swagger-ui-express": "^4.1.4"
+		"numeric": "^1.2.6"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.2",
