--- a/.gitignore
+++ b/.gitignore
@@ -109,10 +109,14 @@ temp/
 
 # End of https://www.gitignore.io/api/node
 
+# Node app sepcific ignores
 node_modules
 out
 .eslintrc
 *.git_ignore.js
+
+# Firebase
+ses2a-quantum-solver-firebase-*.json
 
 # IDEs
 .idea
