--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
 		"dotenv": "^8.2.0",
 		"esm": "^3.2.25",
 		"express": "^4.17.1",
+		"firebase-admin": "^8.10.0",
 		"morgan": "^1.10.0",
 		"numeric": "^1.2.6"
 	},
