--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mocha": "^7.1.1",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.2",
+    "should": "^13.2.3",
     "supertest": "^4.0.2"
   },
   "scripts": {
