--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.10.0",
     "morgan": "^1.10.0",
-    "numeric": "^1.2.6"
+    "numeric": "^1.2.6",
+    "nyc": "^15.0.1"
   },
   "devDependencies": {
     "mocha": "^7.1.1",
@@ -29,8 +30,9 @@
   "scripts": {
     "prod": "node -r esm -r dotenv/config src/index.js",
     "dev": "nodemon --exec \"npm run prod\"",
-    "test": "mocha --require esm 'src/test/**/*.spec.js'",
+    "test": "mocha -r esm -r dotenv/config 'src/test/**/*.spec.js'",
     "lint": "prettier \"src/**/*.js\" --write",
+    "coverage": "nyc npm run test",
     "docker-build": "docker build -t ses-2a-backend .",
     "docker-run-prod": "docker run -p 3000:3000 ses-2a-backend",
     "docker-run-dev": "docker run -p 3000:3000 -v $(pwd):/app -e STAGE=\"dev\" ses-2a-backend"
