--- a/backend/package.json
+++ b/backend/package.json
@@ -17,25 +17,24 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.10.0",
     "morgan": "^1.10.0",
-    "numeric": "^1.2.6",
-    "nyc": "^15.0.1",
-    "sinon": "^9.0.2"
+    "numeric": "^1.2.6"
   },
   "devDependencies": {
     "mocha": "^7.1.1",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.2",
     "should": "^13.2.3",
+    "chai": "^4.2.0",
+    "node-mocks-http": "^1.8.1",
+    "nyc": "^15.0.1",
     "supertest": "^4.0.2"
   },
   "scripts": {
     "prod": "node -r esm -r dotenv/config src/index.js",
     "dev": "nodemon --exec \"npm run prod\"",
-    "test": "mocha -r esm -r dotenv/config 'src/**/tests/*.{integration,unit}.js'",
-    "test-unit": "mocha -r esm -r dotenv/config 'src/**/tests/*.unit.js'",
-    "test-integration": "mocha -r esm -r dotenv/config 'src/**/tests/*.integration.js'",
+    "test-unit": "nyc mocha -r esm -r dotenv/config 'src/**/tests/*.unit.js'",
+    "test-integration": "nyc mocha -r esm -r dotenv/config 'src/**/tests/*.integration.js'",
     "lint": "prettier \"src/**/*.js\" --write",
-    "coverage": "nyc npm run test",
     "docker-build": "docker build -t ses-2a-backend .",
     "docker-run-prod": "docker run -p 3000:3000 ses-2a-backend",
     "docker-run-dev": "docker run -p 3000:3000 -v $(pwd):/app -e STAGE=\"dev\" ses-2a-backend"
