--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "chai": "^4.2.0",
     "node-mocks-http": "^1.8.1",
     "nyc": "^15.0.1",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "sinon": "^9.0.2"
   },
   "scripts": {
     "prod": "node -r esm -r dotenv/config src/index.js",
