--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
   "scripts": {
     "prod": "node -r esm -r dotenv/config src/index.js",
     "dev": "nodemon --exec \"npm run prod\"",
-    "test": "mocha --require esm 'src/test/**/*.spec.js'",
+    "test:unit": "mocha --require esm 'src/**/*.unit.js'",
+    "test:integration": "mocha --require esm 'src/**/*.spec.js'",
     "lint": "prettier \"src/**/*.js\" --write",
     "docker-build": "docker build -t ses-2a-backend .",
     "docker-run-prod": "docker run -p 3000:3000 ses-2a-backend",
