added login endpoint for fetching idToken easily

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,6 @@ STAGE=dev
 
 # Port to run API on
 API_PORT=4000
+
+# The web api key for firbase to do server side login
+FIREBASE_WEB_API_KEY="SOME_API_KEY_FROM_FIREBASE"
