--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "url": "git://github.com/AndrewDucDanhDo/Software-Engineering-Studio-2A"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
