--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,5 +4,7 @@ STAGE=dev
 # Port to run API on
 API_PORT=4000
 
-# The web api key for firbase to do server side login
+# Firbase configs
+FIREBASE_DB_URL="https://ses2a-quantum-solver.firebaseio.com"
 FIREBASE_WEB_API_KEY="SOME_API_KEY_FROM_FIREBASE"
+FIREBASE_SVC_PATH="../some/path/to/key.json"
