--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.10.0",
     "morgan": "^1.10.0",
-    "numeric": "^1.2.6"
+    "numeric": "^1.2.6",
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "mocha": "^7.1.1",
