implemented endpoint for admin get all tasks

--- a/docs/swagger/paths/task/get-all-tasks-teacher.json
+++ b/docs/swagger/paths/task/get-all-tasks-teacher.json
@@ -1,7 +1,7 @@
 {
 	"get": {
 		"tags": ["task", "admin"],
-		"summary": "Fetch all tasks in the system. TODO",
+		"summary": "Fetch all tasks in the system.",
 		"parameters": [],
 		"responses": {
 			"200": {
