cleaned up swagger docs

--- a/docs/swagger/paths/task/get-all-tasks-student.json
+++ b/docs/swagger/paths/task/get-all-tasks-student.json
@@ -1,7 +1,7 @@
 {
 	"get": {
 		"tags": ["task"],
-		"summary": "Fetch all tasks assigned to the user. TODO",
+		"summary": "Fetch all tasks assigned to the user.",
 		"parameters": [],
 		"responses": {
 			"200": {
