- getting the branch up to date with master - trying to get backend up

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,5 +6,5 @@ API_PORT=4000
 
 # Firbase configs
 FIREBASE_DB_URL="https://ses2a-quantum-solver.firebaseio.com"
-FIREBASE_WEB_API_KEY="SOME_API_KEY_FROM_FIREBASE"
-FIREBASE_SVC_PATH="../some/path/to/key.json"
+FIREBASE_WEB_API_KEY="AIzaSyCE_TaEaKZRlCJ4-2LVWIXDzaSG7Oncy30"
+FIREBASE_SVC_PATH="../../../key.json"
