--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.14",
+    "@devexpress/dx-react-chart": "^2.6.3",
+    "@devexpress/dx-react-chart-material-ui": "^2.6.3",
+    "@devexpress/dx-react-core": "^2.6.3",
+    "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.53",
+    "@material-ui/lab": "^4.0.0-alpha.54",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "clsx": "^1.1.0",
-    "firebase": "^7.14.3",
+    "firebase": "^7.14.5",
     "material-table": "^1.57.2",
     "material-ui": "^1.0.0-beta.47",
     "material-ui-icons": "^1.0.0-beta.36",
