--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "axios-auth-refresh": "^2.2.6",
     "clsx": "^1.1.0",
     "firebase": "^7.14.3",
     "material-table": "^1.57.2",
